--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.adil.apps.twitter.TwitterApplication"
+        android:name="com.codepath.apps.twitter.TwitterApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -27,7 +27,7 @@
             android:value="1" />
 
         <activity
-            android:name="com.adil.apps.twitter.activities.LoginActivity"
+            android:name="com.codepath.apps.twitter.activities.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -46,8 +46,8 @@
                     android:scheme="oauth" />
             </intent-filter>
         </activity>
-        <activity android:name="com.adil.apps.twitter.activities.TimelineActivity" />
-        <activity android:name="com.adil.apps.twitter.activities.TweetDetailActivity"/>
+        <activity android:name="com.codepath.apps.twitter.activities.TimelineActivity" />
+        <activity android:name="com.codepath.apps.twitter.activities.TweetDetailActivity"/>
     </application>
 
 </manifest>
