--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:design:23.1.1'
     compile 'org.parceler:parceler-api:1.0.4'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     apt 'org.parceler:parceler:1.0.4'
 }
