fixes to profile layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
         <activity
             android:name="com.codepath.apps.twitter.activities.TweetDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="com.codepath.apps.twitter.activities.UserProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
